third_party/move/tools/move-abigen/tests/sources/bad_script.move
script {
    fun bad_script() {
        abort true  // type error, abort code must be a u64
    }
}
